--- a/MIT_iTraker/mit_数据探索.ipynb
+++ b/MIT_iTraker/mit_数据探索.ipynb
@@ -29,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fname=os.listdir(root_addr)"
@@ -176,7 +178,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_counter={'left_up':[],'right_up':[],\n",
@@ -187,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i,data_ in enumerate(b):\n",
@@ -232,7 +238,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -337,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_counter['mid']"
@@ -346,7 +354,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.plot(range(len(data_counter['mid'])),data_counter['mid'],'*')\n",
@@ -356,7 +366,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_=np.concatenate((b[0].reshape(1,-1),b[1].reshape(1,-1)),axis=1)"
