--- a/CUMT_iTraker/cumt_itraker_calibrate .ipynb
+++ b/CUMT_iTraker/cumt_itraker_calibrate .ipynb
@@ -12,6 +12,7 @@
     "2017年10月12日\n",
     "    完成：\n",
     "        对不同环境下的图片进行标定，用这些标定图片微调网络，能得到比较好的表现\n",
+    "        opencv读取视频得到的图片是BGR模式的，CUMT模型时RGB输入，需要调整\n",
     "''"
    ]
   },
@@ -88,7 +89,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#模拟校正的图片\n",
@@ -103,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "val['images'].shape,cumt_data['data'].shape"
@@ -117,7 +122,7 @@
    },
    "outputs": [],
    "source": [
-    "tr_num=10#校正图片数目\n",
+    "tr_num=100#校正图片数目\n",
     "#修改，只用一部分视频数据来训练，看效果\n",
     "all_picnum=val['images'].shape[0]\n",
     "index=a=np.asarray(range(all_picnum))\n",
@@ -143,6 +148,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -218,48 +224,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "VGG_MEAN = [103.939, 116.779, 123.68]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture(r'demo.flv')\n",
+    "\n",
+    "cap = cv2.VideoCapture(r'test.flv')\n",
     "fps=cap.get(cv2.CAP_PROP_FPS)\n",
-    "fsize=(int(cap.get(cv2.CAP_PROP_FRAME_WIDTH)),\n",
-    "      int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT)),)\n",
+    "fsize=(\n",
+    "    int(cap.get(cv2.CAP_PROP_FRAME_WIDTH)),\n",
+    "    int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "      )\n",
     "# save video\n",
-    "video_saver=cv2.VideoWriter('demo13.flv',cv2.VideoWriter_fourcc('F','L','V','1'),fps,fsize)\n",
+    "video_saver=cv2.VideoWriter('demo_h.flv',cv2.VideoWriter_fourcc('F','L','V','1'),30,fsize)\n",
     "while (True):\n",
     "    ret,frame = cap.read()\n",
+    "    \n",
     "    if ret==True:\n",
-    "        #ori 为原始图片--bgr,网络训练是用rgb训练的\n",
-    "        ori_img=frame.copy()\n",
     "        #截取眼部图片\n",
+    "        #frame=np.transpose(frame,[1,0,2])\n",
+    "        #frame=frame[::-1,:,:]\n",
     "        eye_img=UI.drew_face_eye(frame,minNeighbors=10,scaleFactor=1.1,minSize=(20,20))\n",
-    "        \n",
     "        if eye_img is None:\n",
     "            #没有检测到眼睛，跳到下一帧\n",
-    "            cv2.imshow('frame',ori_img)\n",
+    "            #frame=UI.drawline(frame,line_w=1)\n",
+    "            cv2.imshow('frame',frame)\n",
     "            video_saver.write(frame)\n",
-    "            cv2.waitKey(30)\n",
+    "            if cv2.waitKey(30)& 0xff ==ord('q'):\n",
+    "                print('quite')\n",
+    "                break\n",
     "            continue\n",
-    "        #e1=imresize(eye_img,(32,128,3)).astype('float32')-mean_pic\n",
-    "        e1=imresize(eye_img,(32,128,3)).astype('float32')-[123.68, 116.779, 103.939]\n",
-    "        #eye_img=(eye_img-[123.68, 116.779, 103.939])[:,:,::-1]\n",
-    "        #检测到眼睛，送入网络\n",
-    "        #x_=imresize(eye_img,(32,128,3)).reshape((1,32,128,3))\n",
+    "        e1=imresize(eye_img,(32,128,3)).astype('float32')-VGG_MEAN\n",
+    "        e1=e1[:,:,::-1]\n",
     "        x_=e1.reshape((1,32,128,3))\n",
     "        pre_asw=sess.run(y_guess,feed_dict={X:x_,DROPOUT:1.,BN_FLAG:False})[0]\n",
     "        #给图片划线，划框\n",
+    "        print(pre_asw)\n",
     "        frame=UI.drawline(frame,line_w=1)\n",
-    "        #if pre_asw == 1:pre_asw=6\n",
-    "        #print(pre_asw,pre2block[pre_asw])\n",
-    "        if pre_asw == 1:\n",
-    "            #闭眼的情况\n",
-    "#             UI.drawblock(frame,1)\n",
-    "#             UI.drawblock(frame,2)\n",
-    "#             UI.drawblock(frame,3)\n",
-    "            pass\n",
-    "        else:\n",
+    "        if pre_asw != 1:\n",
     "            #有检测结果\n",
     "            \n",
     "            frame=UI.drawblock(frame,pre2block[pre_asw])\n",
@@ -321,7 +334,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#改\n",
@@ -426,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(ori_video)\n",
