--- a/CUMT_iTraker/cumt_itraker_calibrate .ipynb
+++ b/CUMT_iTraker/cumt_itraker_calibrate .ipynb
@@ -94,10 +94,11 @@
    },
    "outputs": [],
    "source": [
-    "#模拟校正的图片\n",
-    "d=np.load('eye_val_cal2.pkl')\n",
+    "#模拟校正的图片,训练图片为 RGB\n",
+    "d=np.load('eye_val_H2.pkl')\n",
     "val={}\n",
     "mean_pic=np.mean(d['images'],0)\n",
+    "#mean_pic=[103.939, 116.779, 123.68]\n",
     "val['images']=d['images'].astype('float32')-mean_pic\n",
     "val['labels']=d['labels']\n",
     "del d"
@@ -106,12 +107,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "val['images'].shape,cumt_data['data'].shape"
+    "val['images'].shape"
    ]
   },
   {
@@ -122,7 +121,10 @@
    },
    "outputs": [],
    "source": [
-    "tr_num=100#校正图片数目\n",
+    "#方法 1：随机抽取照片标定\n",
+    "\n",
+    "tr_num=(val['images'].shape[0])*0.5#校正图片数目\n",
+    "tr_num=int(tr_num)\n",
     "#修改，只用一部分视频数据来训练，看效果\n",
     "all_picnum=val['images'].shape[0]\n",
     "index=a=np.asarray(range(all_picnum))\n",
@@ -131,6 +133,15 @@
     "te_mask=index[tr_num:]\n",
     "tr_img,tr_lab=val['images'][tr_mask],val['labels'][tr_mask]\n",
     "te_img,te_lab=val['images'][te_mask],val['labels'][te_mask]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tr_num"
    ]
   },
   {
@@ -148,7 +159,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -156,10 +166,10 @@
     "# 150 loop/min\n",
     "lr_=1e-3\n",
     "for i in range(150*60*2):\n",
-    "    #mask=np.random.choice(range(merge_labels.shape[0]),256,replace=False)\n",
-    "    #x_,y_=merge_data[mask],merge_labels[mask]\n",
-    "    x_,y_=tr_img,tr_lab\n",
-    "    feed_dict={X:x_,Y:y_,DROPOUT:0.3,BN_FLAG:True,LR:lr_}\n",
+    "    mask=np.random.choice(range(tr_num),64,replace=False)\n",
+    "    x_,y_=tr_img[mask],tr_lab[mask]\n",
+    "    #x_,y_=tr_img,tr_lab\n",
+    "    feed_dict={X:x_,Y:y_,DROPOUT:0.1,BN_FLAG:True,LR:lr_}\n",
     "    sess.run([TRAIN,ex_ops],feed_dict=feed_dict)\n",
     "\n",
     "    if i%10==0:\n",
@@ -217,7 +227,9 @@
     "#预测方向到九宫格方向,\n",
     "pre2block={2:3,3:2,4:1,\n",
     "           5:6,6:5,7:4,\n",
-    "           8:9,9:8,10:7}"
+    "           8:9,9:8,10:7}\n",
+    "#校正时需要保存图像均值\n",
+    "VGG_MEAN =mean_pic"
    ]
   },
   {
@@ -228,7 +240,8 @@
    },
    "outputs": [],
    "source": [
-    "VGG_MEAN = [103.939, 116.779, 123.68]"
+    "#BGR\n",
+    "#VGG_MEAN = [103.939, 116.779, 123.68]\n"
    ]
   },
   {
@@ -239,34 +252,36 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "cap = cv2.VideoCapture(r'test.flv')\n",
+    "cap = cv2.VideoCapture(r'real-Z.mp4')\n",
     "fps=cap.get(cv2.CAP_PROP_FPS)\n",
     "fsize=(\n",
     "    int(cap.get(cv2.CAP_PROP_FRAME_WIDTH)),\n",
     "    int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
     "      )\n",
     "# save video\n",
-    "video_saver=cv2.VideoWriter('demo_h.flv',cv2.VideoWriter_fourcc('F','L','V','1'),30,fsize)\n",
+    "video_saver=cv2.VideoWriter('demo_1041.flv',cv2.VideoWriter_fourcc('F','L','V','1'),20,fsize)\n",
     "while (True):\n",
     "    ret,frame = cap.read()\n",
     "    \n",
     "    if ret==True:\n",
     "        #截取眼部图片\n",
-    "        #frame=np.transpose(frame,[1,0,2])\n",
-    "        #frame=frame[::-1,:,:]\n",
-    "        eye_img=UI.drew_face_eye(frame,minNeighbors=10,scaleFactor=1.1,minSize=(20,20))\n",
+    "#         frame=np.transpose(frame,[1,0,2])\n",
+    "#         frame=frame[::-1,:,:]\n",
+    "#         eye_img=None\n",
+    "        #frame=frame[:,::-1,:]\n",
+    "        eye_img=UI.drew_face_eye(frame)\n",
     "        if eye_img is None:\n",
     "            #没有检测到眼睛，跳到下一帧\n",
-    "            #frame=UI.drawline(frame,line_w=1)\n",
     "            cv2.imshow('frame',frame)\n",
     "            video_saver.write(frame)\n",
     "            if cv2.waitKey(30)& 0xff ==ord('q'):\n",
     "                print('quite')\n",
     "                break\n",
     "            continue\n",
+    "        # BGR -> RGB\n",
+    "        eye_img=eye_img[:,:,::-1]\n",
     "        e1=imresize(eye_img,(32,128,3)).astype('float32')-VGG_MEAN\n",
-    "        e1=e1[:,:,::-1]\n",
+    "        \n",
     "        x_=e1.reshape((1,32,128,3))\n",
     "        pre_asw=sess.run(y_guess,feed_dict={X:x_,DROPOUT:1.,BN_FLAG:False})[0]\n",
     "        #给图片划线，划框\n",
@@ -340,26 +355,25 @@
    "outputs": [],
    "source": [
     "#改\n",
-    "cap = cv2.VideoCapture(r'D:\\Proj_DL\\Code\\Proj_EyeTraker\\test.flv')\n",
+    "cap = cv2.VideoCapture('real-Z.mp4')\n",
     "i_counter=0\n",
     "while (True):\n",
     "    i_counter+=1\n",
     "    ret,frame = cap.read()\n",
     "    if ret==True:\n",
     "        #截取眼部图片\n",
-    "        eye_img=UI.drew_face_eye(frame,minNeighbors=10,scaleFactor=1.1,minSize=(20,20))\n",
+    "        eye_img=UI.drew_face_eye(frame)\n",
     "        if eye_img is not None:\n",
     "            cv2.imshow('frame',eye_img)\n",
-    "            a=cv2.waitKey()\n",
-    "            if a==27:\n",
-    "                #cv2.destroyAllWindows()\n",
-    "                break\n",
-    "            else:\n",
-    "                a-=48\n",
-    "                resize_img=imresize(eye_img,(32,128,3)).astype('uint8')\n",
-    "                cv2.imwrite('./img_save2/'+str(i_counter)+'_'+key_map[a]+'.jpg',resize_img)\n",
-    "                cv2.destroyWindow('frame')\n",
+    "            a=(cv2.waitKey())-48\n",
+    "            cv2.destroyWindow('frame')\n",
     "            \n",
+    "            # Esc 退出，'.'表示放弃这张图\n",
+    "            if a==(-21):\n",
+    "                break\n",
+    "            elif a!=-2:\n",
+    "                resize_img=imresize(eye_img,(32,128,3)).astype('uint8')\n",
+    "                cv2.imwrite('./img_save_zhang/'+str(i_counter)+'_'+key_map[a]+'.jpg',resize_img)\n",
     "    else:\n",
     "        print('video end')\n",
     "        break\n",
@@ -375,7 +389,7 @@
    },
    "outputs": [],
    "source": [
-    "img_root='./img_save2'\n",
+    "img_root='./img_save_zhang'\n",
     "lis=os.listdir(img_root)\n",
     "img_arr,lab_arr=[],[]\n",
     "for addr in lis:\n",
@@ -403,8 +417,19 @@
    },
    "outputs": [],
    "source": [
+    "img_mat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "import pickle\n",
-    "fp=open('eye_val_cal2.pkl','wb')\n",
+    "fp=open('eye_val_H2.pkl','wb')\n",
     "pickle.dump(file=fp,obj={'images':img_mat,'labels':lab_mat})\n",
     "fp.close()"
    ]
@@ -420,7 +445,7 @@
     "/********************************************************/\n",
     "'''\n",
     "视频分辨率转换\n",
-    "（M,N） -> (640,640)\n",
+    "（M,N） -> (640,480)\n",
     "'''"
    ]
   },
@@ -434,8 +459,9 @@
    "source": [
     "import cv2\n",
     "from scipy.misc import imresize\n",
-    "ori_video=r'real.mp4'\n",
-    "tar_video=r'real_l.flv'"
+    "import numpy as np\n",
+    "ori_video=r'real-Z.mp4'\n",
+    "tar_video=r'real_h.flv'"
    ]
   },
   {
@@ -446,19 +472,22 @@
    },
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture(ori_video)\n",
-    "#cap = cv2.VideoCapture(r'C:\\Users\\Administrator\\Downloads\\Video\\ee.flv')\n",
+    "cap = cv2.VideoCapture(r'real_H.mp4')\n",
     "fps=cap.get(cv2.CAP_PROP_FPS)\n",
-    "fsize=(640,640)\n",
+    "fsize=(\n",
+    "    int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT)),\n",
+    "    int(cap.get(cv2.CAP_PROP_FRAME_WIDTH)),\n",
+    "    \n",
+    "      )\n",
     "# save video\n",
-    "video_saver=cv2.VideoWriter(tar_video,cv2.VideoWriter_fourcc('F','L','V','1'),fps,fsize)\n",
+    "video_saver=cv2.VideoWriter('real_h.flv',cv2.VideoWriter_fourcc('F','L','V','1'),30,fsize)\n",
     "while (True):\n",
     "    ret,frame = cap.read()\n",
     "    if ret==True:\n",
-    "        e1=imresize(frame,(640,640,3)).astype('uint8')\n",
-    "        cv2.imshow('frame',e1)\n",
-    "        video_saver.write(e1)\n",
-    "        if cv2.waitKey(30)& 0xff ==ord('q'):\n",
+    "        frame=(np.transpose(frame,[1,0,2]))[::-1,:,:]\n",
+    "        cv2.imshow('frame',frame)\n",
+    "        video_saver.write(frame)\n",
+    "        if cv2.waitKey(10)& 0xff ==ord('q'):\n",
     "            print('quite')\n",
     "            break\n",
     "    else:\n",
@@ -467,6 +496,28 @@
     "cap.release()\n",
     "video_saver.release()\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "video_saver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "video_saver.release()"
    ]
   },
   {
@@ -495,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
