--- a/CUMT_iTraker/cumt_itraker_calibrate .ipynb
+++ b/CUMT_iTraker/cumt_itraker_calibrate .ipynb
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "#模拟校正的图片,训练图片为 RGB\n",
-    "d=np.load('eye_val_H2.pkl')\n",
+    "d=np.load('./test_video/101603/101603_z.pkl')\n",
     "val={}\n",
     "mean_pic=np.mean(d['images'],0)\n",
     "#mean_pic=[103.939, 116.779, 123.68]\n",
@@ -116,14 +116,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#方法 1：随机抽取照片标定\n",
     "\n",
-    "tr_num=(val['images'].shape[0])*0.5#校正图片数目\n",
+    "tr_num=(val['images'].shape[0])*0.3#校正图片数目\n",
     "tr_num=int(tr_num)\n",
     "#修改，只用一部分视频数据来训练，看效果\n",
     "all_picnum=val['images'].shape[0]\n",
@@ -216,9 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "prob=tf.nn.softmax(y_score,name='prob')\n",
@@ -252,14 +248,14 @@
    },
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture(r'real-Z.mp4')\n",
+    "cap = cv2.VideoCapture(r'test_video/101603.mp4')\n",
     "fps=cap.get(cv2.CAP_PROP_FPS)\n",
     "fsize=(\n",
     "    int(cap.get(cv2.CAP_PROP_FRAME_WIDTH)),\n",
     "    int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
     "      )\n",
     "# save video\n",
-    "video_saver=cv2.VideoWriter('demo_1041.flv',cv2.VideoWriter_fourcc('F','L','V','1'),20,fsize)\n",
+    "video_saver=cv2.VideoWriter('demo_1041.flv',cv2.VideoWriter_fourcc('F','L','V','1'),50,fsize)\n",
     "while (True):\n",
     "    ret,frame = cap.read()\n",
     "    \n",
@@ -274,7 +270,7 @@
     "            #没有检测到眼睛，跳到下一帧\n",
     "            cv2.imshow('frame',frame)\n",
     "            video_saver.write(frame)\n",
-    "            if cv2.waitKey(30)& 0xff ==ord('q'):\n",
+    "            if cv2.waitKey(10)& 0xff ==ord('q'):\n",
     "                print('quite')\n",
     "                break\n",
     "            continue\n",
@@ -295,7 +291,7 @@
     "        #cv2.imshow('frame',x_.reshape((32,128,3)))\n",
     "        cv2.imshow('frame',frame)\n",
     "        video_saver.write(frame)\n",
-    "        if cv2.waitKey(30)& 0xff ==ord('q'):\n",
+    "        if cv2.waitKey(10)& 0xff ==ord('q'):\n",
     "            print('quite')\n",
     "            break\n",
     "    else:\n",
@@ -349,13 +345,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#改\n",
-    "cap = cv2.VideoCapture('real-Z.mp4')\n",
+    "cap = cv2.VideoCapture(r'test_video/101603.mp4')\n",
     "i_counter=0\n",
     "while (True):\n",
     "    i_counter+=1\n",
@@ -373,7 +367,7 @@
     "                break\n",
     "            elif a!=-2:\n",
     "                resize_img=imresize(eye_img,(32,128,3)).astype('uint8')\n",
-    "                cv2.imwrite('./img_save_zhang/'+str(i_counter)+'_'+key_map[a]+'.jpg',resize_img)\n",
+    "                cv2.imwrite('./test_video/101603'+str(i_counter)+'_'+key_map[a]+'.jpg',resize_img)\n",
     "    else:\n",
     "        print('video end')\n",
     "        break\n",
@@ -389,7 +383,7 @@
    },
    "outputs": [],
    "source": [
-    "img_root='./img_save_zhang'\n",
+    "img_root='./test_video/101603'\n",
     "lis=os.listdir(img_root)\n",
     "img_arr,lab_arr=[],[]\n",
     "for addr in lis:\n",
@@ -412,9 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "img_mat.shape"
@@ -429,7 +421,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "fp=open('eye_val_H2.pkl','wb')\n",
+    "fp=open('./test_video/101603/101603_z.pkl','wb')\n",
     "pickle.dump(file=fp,obj={'images':img_mat,'labels':lab_mat})\n",
     "fp.close()"
    ]
@@ -546,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
